--- a/index.html
+++ b/index.html
@@ -31,6 +31,34 @@
           and your loved ones are protected.</p>
         <button>View plans</button>
     </section>
+    <section class="different">
+      <h1>
+        We're different
+      </h1>
+      <div class="different-cards">
+        <div class="different-card">
+          <img src="/images/icon-snappy-process.svg" alt="A clock">
+          <h2>Snappy Process</h2>
+          <p>Our application process can be completed in minutes, not hours. Don’t get 
+            stuck filling in tedious forms.</p>
+        </div>
+        <div class="different-card">
+          <img src="/images/icon-affordable-prices.svg" alt="A dollar sign">
+          <h2>Affordable Prices</h2>
+          <p>We don’t want you worrying about high monthly costs. Our prices may be low, 
+            but we still offer the best coverage possible.</p>
+        </div>
+        <div class="different-card">
+          <img src="/images/icon-people-first.svg" alt="A person">
+          <h2>People First</h2>
+          <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make 
+            sure you’re covered when you need it.</p>
+        </div>
+    </section>
+    <section class="find-out">
+      <h1>Find out more about how we work</h1>
+      <button>How we work</button>
+    </section>
     
 
   </main>
