--- a/index.html
+++ b/index.html
@@ -59,69 +59,52 @@
       <h1>Find out more about how we work</h1>
       <button>How we work</button>
     </section>
-    
-
   </main>
-
-  <!-- How we work
-  Blog
-  Account
-  View plans
-
-  Humanizing your insurance.
-
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
-
-  View plans
-
-  We’re different
-
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press -->
-  <!-- Licenses -->
-
+  <footer>
+    <div class="logo-social">
+      <img src="/images/logo.svg" alt="Insure logo">
+      <div class="social">
+        <img src="/images/icon-facebook.svg" alt="Facebook">
+        <img src="/images/icon-twitter.svg" alt="Twitter">
+        <img src="/images/icon-pinterest.svg" alt="Pinterest">
+        <img src="/images/icon-instagram.svg" alt="Instagram">
+      </div>
+    </div>
+    <div class="important-links">
+      <div class="container our-company">
+        <h2>Our company</h2>
+        <ul>
+          <li><a href="/how-we-work">How we work</a></li>
+          <li><a href="/why-insure">Why insure?</a></li>
+          <li><a href="/view-plans">View plans</a></li>
+          <li><a href="/reviews">Reviews</a></li>
+        </ul>
+      </div>
+      <div class="container help-me">
+        <h2>Help me</h2>
+        <ul>
+          <li><a href="/faq">FAQ</a></li>
+          <li> <a href="/terms-of-use">Terms of use</a></li>
+          <li><a href="/privacy-policy">Privacy policy</a></li>
+          <li><a href="/cookies">Cookies</a></li>
+        </ul>
+      </div>
+      <div class="container contact">
+        <h2>Contact</h2>
+        <ul>
+          <li><a href="/sales">Sales</a></li>
+          <li><a href="/support">Support</a></li>
+          <li><a href="/live-chat">Live chat</a></li>
+        </ul>
+      </div>
+      <div class="container others">
+        <h2>Others</h2>
+        <ul>
+          <li><a href="/careers">Careers</a></li>
+          <li><a href="/press">Press</a></li>
+          <li><a href="/licenses">Licenses</a></li>
+        </ul>
+    </div>
+  </footer>
 </body>
 </html>
