mobile menu toggle added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   <header>
     <img src="/images/logo.svg" alt="Insure logo" class="logo">
     <img src="/images/icon-hamburger.svg" alt="" class="hamburger">
+    <div class="mobile-nav hidden">
+      <ul>
+        <li><a href="/how-we-work">How we work</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/account">Account</a></li>
+        <li><button>View plans</button></li>
+      </ul>
+    </div>
   </header>
   <main>
     <section class="intro">
@@ -106,5 +114,6 @@
         </ul>
     </div>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
