first desktop styles

--- a/index.html
+++ b/index.html
@@ -26,18 +26,35 @@
         <li><button>View plans</button></li>
       </ul>
     </div>
+    <nav class="desktop">
+      <ul>
+        <li><a href="/how-we-work">How we work</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/account">Account</a></li>
+        <li><button>View plans</button></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <section class="intro">
+      <div class="shape"></div>
       <div class="hero-container">
-        <img src="/images/image-intro-mobile.jpg" alt="A family with two kids">
+        <picture>
+          <source media="(min-width: 768px)" srcset="/images/image-intro-desktop.jpg"/>
+          <source media="(max-width: 767px)" srcset="/images/image-intro-mobile.jpg"/>
+          <img srcset="" src="/images/image-intro-mobile.jpg" alt="A family with two kids">
+        </picture>
       </div>
       <div class="intro-text">
-        <h1>Humanizing your insurance.</h1>
-        <p>Get your life insurance coverage easier and faster. We blend our expertise 
-          and technology to help you find the plan that’s right for you. Ensure you 
-          and your loved ones are protected.</p>
-        <button>View plans</button>
+        <div class="main-text">
+          <h1>Humanizing your insurance.</h1>
+          <p>Get your life insurance coverage easier and faster. We blend our expertise 
+            and technology to help you find the plan that’s right for you. Ensure you 
+            and your loved ones are protected.</p>
+          <button>View plans</button>
+        </div>
+      </div>
+      <div class="shape-left"></div>
     </section>
     <section class="different">
       <h1>
